# nvglxfix

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  xspam.c
